--- a/data/config.json
+++ b/data/config.json
@@ -1,5 +1,5 @@
 {
   "githubUser": "evan-andrian",
-  "githubToken" : "REDACTED_REMOVE_AND_SET_ENV",
+  "gitHubToken": "REDACTED_REMOVE_AND_SET_ENV",
   "organizations": ["25-tetris", "DineTable", "poosoap"]
 }
